<resources>
    <string name="app_name">LoginPage</string>
    <string name="account_log_in">Account log in</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome!</string>
</resources>